Fixes: #723 - Fixes small design issues (#726)
minor change

remove horizontal scroll

did changes to styles

avoid the little jump

remove extra length

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -16,6 +16,9 @@
 
 .section_blog{
     -webkit-font-smoothing: antialiased;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: justify;
     margin: 0 auto;
     padding: 100px 20px 100px 20px;
     position: relative;
