--- a/src/components/Terms/Terms.css
+++ b/src/components/Terms/Terms.css
@@ -17,9 +17,10 @@
 .section-container {
     margin: 0 auto;
     max-width: 1120px;
-    padding: 80px 20px 120px 0px;
+    padding: 80px 20px 80px 0px;
     position: relative;
     text-align: center;
+    color: #414141;
 }
 
 .side-menu{
@@ -37,7 +38,7 @@
 
 .terms-list{
     float: left;
-    width: 66%;
+    width: 100%;
     text-align: justify;
     font-family: "Product Sans", sans-serif;
     font-weight: 300;
